# haskpass

./: README.md  haskpass.cabal  haskpass.cabal~  stack.yaml
src/: AgileKeychain.hs  GUI.hs  Utils.hs
test/: Spec.hs
