name:                haskpass
version:             0.1.0.0
synopsis:            1password client for linux
description:         Please see README.md
homepage:            https://github.com/themattchan/haskpass#readme
license:             MIT
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@parametri.city
copyright:           2016 Matthew Chan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     , transformers
                     , bytestring
                     , filepath
                     , gtk
                     , HsOpenSSL
                     , attoparsec
                     , aeson
                     , url
  default-language:    Haskell2010

executable haskpass-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskpass
  default-language:    Haskell2010

test-suite haskpass-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskpass
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/themattchan/haskpass
